--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
-  "name": "govcorp---corporate-governance-portal",
+  "name": "gestor-conselho-inepad",
   "private": true,
-  "version": "0.0.0",
+  "version": "0.1.0",
   "type": "module",
   "scripts": {
     "dev": "vite",
@@ -9,16 +9,18 @@
     "preview": "vite preview"
   },
   "dependencies": {
-    "react-dom": "^19.2.4",
-    "react": "^19.2.4",
+    "@google/genai": "^1.41.0",
     "lucide-react": "^0.564.0",
-    "recharts": "^3.7.0",
-    "@google/genai": "^1.41.0"
+    "react": "^19.2.4",
+    "react-dom": "^19.2.4",
+    "recharts": "^3.7.0"
   },
   "devDependencies": {
-    "@types/node": "^22.14.0",
-    "@vitejs/plugin-react": "^5.0.0",
-    "typescript": "~5.8.2",
-    "vite": "^6.2.0"
+    "@types/react": "^19.2.4",
+    "@types/react-dom": "^19.2.4",
+    "@vitejs/plugin-react": "^4.3.4",
+    "path": "^0.12.7",
+    "typescript": "^5.7.3",
+    "vite": "^6.0.11"
   }
 }
